feat: update user display with dynamic avatar and name

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,9 @@
 <div>
   <button>
-    <img src="" alt="userImg" />
-    <span>USER</span>
+    <img
+      [src]="'assets/users/' + selectedUser.avatar"
+      [alt]="selectedUser.id"
+    />
+    <span>{{ selectedUser.name }}</span>
   </button>
 </div>
