--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,9 +1,6 @@
 <div>
-  <button>
-    <img
-      [src]="'assets/users/' + selectedUser.avatar"
-      [alt]="selectedUser.id"
-    />
+  <button (click)="onSelectedUser()">
+    <img [src]="imagePath" [alt]="selectedUser.id" />
     <span>{{ selectedUser.name }}</span>
   </button>
 </div>
