--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
 <main>
   <ul id="users">
     <li>
-      <app-user />
+      <app-user
+        [id]="users[0].id"
+        [name]="users[0].name"
+        [avatar]="users[0].avatar"
+      />
     </li>
   </ul>
 </main>
