fix: update image and name bindings in user component template

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
   <button (click)="onSelectedUser()">
-    <img [src]="imagePath()" [alt]="selectedUser().id" />
-    <span>{{ selectedUser().name }}</span>
+    <img [src]="imagePath" [alt]="id" />
+    <span>{{ name }}</span>
   </button>
 </div>
