feat: add user selection event handling in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
         [id]="users[0].id"
         [name]="users[0].name"
         [avatar]="users[0].avatar"
+        (select)="onReceiveUser($event)"
       />
     </li>
   </ul>
