--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,29 @@
         (select)="onReceiveUser($event)"
       />
     </li>
+    <li>
+      <app-user
+        [id]="users[1].id"
+        [name]="users[1].name"
+        [avatar]="users[1].avatar"
+        (select)="onReceiveUser($event)"
+      />
+    </li>
+    <li>
+      <app-user
+        [id]="users[2].id"
+        [name]="users[2].name"
+        [avatar]="users[2].avatar"
+        (select)="onReceiveUser($event)"
+      />
+    </li>
+    <li>
+      <app-user
+        [id]="users[3].id"
+        [name]="users[3].name"
+        [avatar]="users[3].avatar"
+        (select)="onReceiveUser($event)"
+      />
+    </li>
   </ul>
 </main>
