refactor: update user component to use a single user input object and improve template bindings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,16 @@
 <main>
   <ul id="users">
     <li>
-      <app-user [user]='users[0]' (select)="onReceiveUser($event)" />
+      <app-user [user]="users[0]" (select)="onReceiveUser($event)" />
     </li>
     <li>
       <app-user [user]="users[1]" (select)="onReceiveUser($event)" />
     </li>
     <li>
-      <app-user [user]='users[2]' (select)="onReceiveUser($event)" />
+      <app-user [user]="users[2]" (select)="onReceiveUser($event)" />
     </li>
     <li>
-      <app-user [user]='users[3]' (select)="onReceiveUser($event)" />
+      <app-user [user]="users[3]" (select)="onReceiveUser($event)" />
     </li>
   </ul>
 
