feat: implement task component with structured layout and add dummy tasks data

--- a/src/app/components/tasks/task/task.component.html
+++ b/src/app/components/tasks/task/task.component.html
@@ -1,1 +1,8 @@
-<p>Task</p>
+<article>
+  <h2>Task Title</h2>
+  <time datetime="">TIME</time>
+  <p>Summary</p>
+  <p class="actions">
+    <button>Complete</button>
+  </p>
+</article>
