--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,13 @@
-<p>{{ userName }}</p>
+<section>
+  <header>
+    <h2>{{ userName }}'s tasks</h2>
+    <menu>
+      <button>Add Task</button>
+    </menu>
+  </header>
+  <ul>
+    <li>
+      <app-task />
+    </li>
+  </ul>
+</section>
