--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </ul>
 
   @if(selectedUser) {
-  <app-tasks [userName]="selectedUser.name" />
+  <app-tasks [userId]="selectedUser.id" [userName]="selectedUser.name" />
   } @else {
   <h2>Select a user to see their tasks</h2>
   }
