style: format app-user component for improved readability

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
   <ul id="users">
     @for(user of users; track user.id) {
     <li>
-      <app-user [selected]="user.id === userId" [user]="user" (select)="onReceiveUser($event)" />
+      <app-user
+        [selected]="user.id === userId"
+        [user]="user"
+        (select)="onReceiveUser($event)"
+      />
     </li>
     }
   </ul>
