--- a/src/app/components/tasks/new-task/new-task.component.html
+++ b/src/app/components/tasks/new-task/new-task.component.html
@@ -1,7 +1,7 @@
 <div class="backdrop" (click)="onCancelAddTask()"></div>
 <dialog open>
   <h2>Add Task</h2>
-  <form (ngSubmit)="onSubmit()" (submit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()">
     <p>
       <label for="title">Title</label>
       <input type="text" id="title" name="title" [(ngModel)]="enteredTitle" />
