--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
-<div>
+<app-card>
   <button [class.active]="selected" (click)="onSelectedUser()">
     <img [src]="imagePath" [alt]="user.id" />
     <span>{{ user.name }}</span>
   </button>
-</div>
+</app-card>
